2011-10-20  Murray Cumming  <murrayc@murrayc.com>

	Replaced Utils::build_sql_select_count_row() with DbUtils::count_rows_returned_by().

	* glom/libglom/utils.cc:
	* glom/base_db.[h|cc]: Moved count_rows_returned_by() to 
 	* glom/libglom/db_utils.[h|cc]: and also moved 
  Utils::build_sql_select_count_row() making it static (not API).
	* glom/frame_glom.cc:
	* glom/mode_data/datawidget/treemodel_db.cc: Adapted.

2011-10-19  Murray Cumming  <murrayc@murrayc.com>

	SQL Injection Test: Try to avoid quoting by giving a wrong field type.

	* tests/test_selfhosting_sqlinjection.cc: Try to avoid quoting by
	saying that a text field is a number but still providing a text value.

2011-10-19  Murray Cumming  <murrayc@murrayc.com>

	SQL Injection Test: Try to use (evil and unquoted) text for a number. 

	* tests/test_selfhosting_sqlinjection.cc: This seems to be safe already.

1.19.15:

2011-10-19  Jasper Lievisse Adriaanse <jasperla@gnome.org>

	Don't unconditionally link with libdl to fix regress tests on
	systems which don't need to link with -ldl for dlopen() etc.

	* configure.ac:
	* Makefile_tests.am: Check for -libdl.

2011-10-19  Murray Cumming  <murrayc@murrayc.com>

	SQL Injection Test: Try both kinds of quote characters.

	* tests/test_selfhosting_sqlinjection.cc: Instead of assuming that we know
	what libgda uses.

2011-10-19  Murray Cumming  <murrayc@murrayc.com>

	Self-hosting: Attempt to avoid failed shutdowns.

	* glom/libglom/connectionpool.cc: invalidate_connection(): Actually call
	Gda::Connection::close() instead of relying on the Connection destructor to
	do that, because maybe it is not closing it if maybe Connection::is_opened()
	is not working correctly.
	cleanup(): invalidate the connection before shutting down the server,
	not after, in case an open connection is stopping the server from closing down. 
	* glom/libglom/connectionpool_backends/postgres_self.[h|cc]:
	connect(): Remember the connection details so we can use them later to show