@@ -1,5 +1,15 @@
 2011-10-20  Murray Cumming  <murrayc@murrayc.com>
 
+	SQLite: Avoid reporting failure when recreating databases.
+
+	* glom/libglom/db_utils.[h|cc]: recreate_database_from_document(): Do not 
+	call add_standard_tables() and add_standard_groups() because create_database()
+	(which we call) has already done this.
+	query_execute_string(): Only -1 is an error, though that is odd.
+	See libgda bug #662279 .
+
+2011-10-20  Murray Cumming  <murrayc@murrayc.com>
+
 	Replaced Utils::build_sql_select_count_row() with DbUtils::count_rows_returned_by().
 
 	* glom/libglom/utils.cc:
